# hermes-webui-fork

./: ARCHITECTURE.md  CHANGELOG.md  README.md  TESTING.md  anchor-track-b.md  demo-card-unification.html  demo-inter-tool-hint.html  demo-live-scenarios.html  demo-live-stream.html
api/: commands.py  config.py  gateway_chat.py  pet_routes.py  profiles.py  routes.py  session_events.py  streaming.py  upload.py  worktrees.py
desktop-pet/: README.md
desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
desktop-pet/src-tauri/capabilities/: pet-window-drag.json
desktop-pet/src-tauri/icons/: icon.icns
desktop-pet/src-tauri/src/: main.rs
docs/: CONTRACTS.md  docker.md
issue2481/: README.md
static/: boot.js  commands.js  i18n.js  index.html  messages.js  panels.js  pet_bridge.js  sessions.js  style.css  sw.js  ui.js  workspace.js
tests/: test_1694_terminal_cleanup_ownership.py  test_1764_context_menu_essentials.py  test_attachment_dir_config_backend.py  test_attachment_dir_settings.py  test_auto_compression_card.py  test_auto_compression_terminal_failure.py  test_cancel_stream_owner_guard.py  test_cli_only_slash_commands.py  test_command_asset_fallbacks.py  test_commands_endpoint.py  test_cost_protection_pause.py  test_desktop_pet_slash_command.py  test_desktop_pet_static.py  test_goal_command_webui.py  test_inflight_stream_reuse.py  test_issue1766_quota_topbar.py  test_issue1786_workspace_heading_actions.py  test_issue1793_file_tree_cruft_filter.py  test_issue2057_worktree_ui_static.py  test_issue2157_sessions_list_stale_stream_state.py  test_live_stream_ux.py  (+29 more)
(+9 files in other folders)
